--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </div>
         <div class="social-media">
             <a target="_blank" href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
-            <a target="_blank" href="https://dribbble.com/""><i class="fab fa-dribbble"></i></a>
+            <a target="_blank" href="https://dribbble.com/"><i class="fab fa-dribbble"></i></a>
             <a target="_blank" href="https://www.youtube.com/"> <i class="fab fa-youtube"></i></a>
             <a target="_blank" href="https://twitter.com/?lang=en"> <i class="fab fa-twitter"></i></a>
         </div>
