--- a/index.html
+++ b/index.html
@@ -91,6 +91,35 @@
             </div>
         </section>
          <!-- Star Players section end-->
+         <!-- media and partner section start -->
+    <section class="container">
+        <div class="media">
+            <!-- vedio gallery start  -->
+                 <h3 class="media-header">Vedio Gallery</h3>
+                <div class="vedio-gallery">
+                    <iframe width="330" height="250" src="https://www.youtube.com/embed/sDFr2Yzd-8s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+                    <iframe width="330" height="250" src="https://www.youtube.com/embed/NbvnpBwA2Zs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+   
+                    <iframe width="330" height="250" src="https://www.youtube.com/embed/SAMjSwSa4Dk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+             <!-- vedio gallery end-->
+             <hr>
+            <!-- sponsorship section start-->
+            <h3 class="media-header">Copa America Partners</h3>
+            <div class="partner-image">
+                <a class="partner-link" href="https://www.adidas.com/us" target="_blank"><img src="./images/partner/adidas.png" alt="adidas"></a>
+                <a target="_blank" class="partner-link" href="https://www.qatarairways.com/"><img src="./images/partner/qatar.png" alt="qatar-airways"></a>
+                <a target="_blank" class="partner-link" href="https://www.qatarairways.com/"><img src="./images/partner/visa.png" alt="visa"></a>
+                <a target="_blank" class="partner-link" href="https://www.adidas.com/us"><img src="./images/partner/cocacola.png" alt="cocacola"></a>
+                <a target="_blank" class="partner-link" href="https://www.qatarairways.com/"><img src="./images/partner/hyundaipng.png" alt="hyundai"></a>
+                <a target="_blank" class="partner-link" href="https://www.adidas.com/us""><img src="./images/partner/wanda.png" alt="wanda"></a>
+            </div>
+             <!-- sponsorship section end-->
+            <hr>
+        </div>
+    </section>
+         <!-- media and partner section end -->
     </main>
     <!-- footer section start  -->
     <footer>
