--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
              <!-- vedio gallery end-->
              <hr>
             <!-- sponsorship section start-->
-            <h3 class="media-header">Copa America Partners</h3>
+            <h3 class="media-header">Fifa Partners</h3>
             <div class="partner-image">
                 <a class="partner-link" href="https://www.adidas.com/us" target="_blank"><img src="./images/partner/adidas.png" alt="adidas"></a>
                 <a target="_blank" class="partner-link" href="https://www.qatarairways.com/"><img src="./images/partner/qatar.png" alt="qatar-airways"></a>
