--- a/index.html
+++ b/index.html
@@ -28,66 +28,66 @@
         <!-- Star Players section starts -->
         <section class="container">
             <div class="star-players">
-                <div class="player">
+                <article class="player">
                     <img src="./images/players/player-1.png" alt="Neymar Jr">
                     <h3 class="player-name">Neymar Jr</h3>
                     <p class="player-info">Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is widely regarded as one of the best players in the world.</p>
-                </div>
-                <div class="player">
+                </article>
+                <article class="player">
                     <img src="./images/players/player-2.png" alt="Lionel Messi">
                     <h3 class="player-name">Lionel Messi</h3>
                     <p class="player-info">Leo Messi is an Argentine professional footballer who often considered the best player in the world and widely regarded as one of the greatest players of all time</p>
-                </div>
-                <div class="player">
+                </article>
+                <article class="player">
                     <img src="./images/players/player-3.png" alt="Cristiano Ronaldo">
                     <h3 class="player-name">Cristiano Ronaldo</h3>
                     <p class="player-info">Cristiano Ronaldo is a Portuguese professional footballer who is widely regarded as one of the best players in the world.</p>
-                </div>
-                <div class="player">
+                </article>
+                <article class="player">
                     <img src="./images/players/player-4.png" alt="Paulo Dybala">
                     <h3 class="player-name">Paulo Dybala</h3>
-                    <p class="player-info">Paulo Dybala (born 5 February 1991), known as Dybala, is widely regarded as one of the best players in the world.</p>
-                </div>
-                <div class="player">
+                    <p class="player-info">Paulo Dybala (born 5 February 1991), known as Dybala,is an versatile genious also widely regarded as one of the best players in the world.</p>
+                </article>
+                <article class="player">
                     <img src="./images/players/player-5.png" alt="Mesut Ozil">
                     <h3 class="player-name">Mesut Ozil</h3>
-                    <p class="player-info">Mesut Ozil (born 5 February 1990), known as Ozil, is widely regarded as one of the best players in the world.</p>
-                </div>
-                <div class="player">
+                    <p class="player-info">Mesut Ozil (born 5 February 1990), known as Ozil, is an versatile genious also widely regarded as one of the best players in the world.</p>
+                </article>
+                <article class="player">
                     <img src="./images/players/player-6.png" alt="Mauro Icardi ">
                     <h3 class="player-name">Mauro Icardi </h3>
-                    <p class="player-info">Mauro Icardi  Silva Santos Júnior (born 5 February 1990), known as Icardi , is widely regarded as one of the best players in the world.</p>
-                </div>
-                <div class="player">
+                    <p class="player-info">Mauro Icardi  Silva Santos Júnior (born 5 February 1990), known as Icardi , is an versatile genious also widely regarded as one of the best players in the world.</p>
+                </article>
+                <article class="player">
                     <img src="./images/players/player-7.png" alt="Di Maria">
                     <h3 class="player-name">Di Maria</h3>
-                    <p class="player-info">Di Maria (born 5 February 1993), known as Di Maria, is widely regarded as one of the best players in the world.</p>
-                </div>
-                <div class="player">
+                    <p class="player-info">Di Maria (born 5 February 1993), known as Di Maria, is an versatile genious also widely regarded as one of the best players in the world.</p>
+                </article>
+                <article class="player">
                     <img src="./images/players/player-8.png" alt="Kylian Mbappé">
                     <h3 class="player-name">Kylian Mbappé</h3>
-                    <p class="player-info">Kylian Mbappé (born 5 February 1997), known as Mbappé, is widely regarded as one of the best players in the world.</p>
-                </div>
-                <div class="player">
+                    <p class="player-info">Kylian Mbappé (born 5 February 1997), known as Mbappé, is a genuine sportsman also widely regarded as one of the best players in the world.</p>
+                </article>
+                <article class="player">
                     <img src="./images/players/player-9.png" alt="Mohamed Salah">
                     <h3 class="player-name">Mohamed Salah</h3>
-                    <p class="player-info">Mohamed Salah (born 5 February 1995), known as Salah, is widely regarded as one of the best players in the world.</p>
-                </div>
-                <div class="player">
+                    <p class="player-info">Mohamed Salah (born 5 February 1995), known as Salah, isa genuine sportsman also widely regarded as one of the best players in the world.</p>
+                </article>
+                <article class="player">
                     <img src="./images/players/player-10.png" alt="Harry Kane">
                     <h3 class="player-name">Harry Kane</h3>
-                    <p class="player-info">Harry Kane (born 5 February 1990), known as Harry, is widely regarded as one of the best players in the world.</p>
-                </div>
-                <div class="player">
+                    <p class="player-info">Harry Kane (born 5 February 1990), known as Harry, isa genuine sportsman also widely regarded as one of the best players in the world.</p>
+                </article>
+                <article class="player">
                     <img src="./images/players/player-11.png" alt="Kevin De Bruyne">
                     <h3 class="player-name">Kevin De Bruyne</h3>
-                    <p class="player-info">Kevin De Bruyne (born 5 February 1991), known as Kevin, is widely regarded as one of the best players in the world.</p>
-                </div>
-                <div class="player">
+                    <p class="player-info">Kevin De Bruyne (born 5 February 1991), known as Kevin, isa genuine sportsman also widely regarded as one of the best players in the world.</p>
+                </article>
+                <article class="player">
                     <img src="./images/players/player-12.png" alt="Philippe Coutinho">
                     <h3 class="player-name">Philippe Coutinho</h3>
                     <p class="player-info">Philippe Coutinho is a professional footballer who plays for France widely regarded as one of the best players in the world.</p>
-                </div>
+                </article>
             </div>
         </section>
          <!-- Star Players section end-->
